fix: Make tooltips clickable on mobile devices

--- a/workspaces/hhs-ui/src/components/InfoPanel/InfoPanel.scss
+++ b/workspaces/hhs-ui/src/components/InfoPanel/InfoPanel.scss
@@ -1,7 +1,7 @@
 @import "../../scss/palette.scss";
 
 .InfoPanel {
-  overflow: auto;
+  overflow: visible;
   position: absolute;
   max-height: 75%;
   min-height: 1px;
